# mpu9250

./: .gitignore  Cargo.toml  README.md  tasks.py
.cargo/: config.toml
examples-stm32/: Cargo.toml  build.rs  memory.x
mpu9250/: Cargo.toml
mpu9250/src/: builder.rs  error.rs  lib.rs  regs.rs  sensor.rs
