[package]
name = "examples-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "acb5e53a53d98e55d4d3d513ce265dbe102cc5a8", features = [
    "stm32f411ce",
    "unstable-pac",
    "time-driver-any",
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "acb5e53a53d98e55d4d3d513ce265dbe102cc5a8", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "acb5e53a53d98e55d4d3d513ce265dbe102cc5a8", features = ["defmt"] }
mpu9250 = { path = "../mpu9250", features = ["async", "defmt"] }
